# ItalianPatenteQuestionsAndVocab

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  restart-dev.sh  vocabolario_patente.json  vocabolario_patente.normalized.json
.github/workflows/: deploy.yml
backend/: .env  .env.example
backend/app/: __main__.py  auth.py  email_sender.py  main.py  rate_limit.py  spend.py
backend/data/: translations.en.json
backend/scripts/: mint_user_tokens.py
deployment/nginx/: limit_req_zones.conf  patenteb.conf
deployment/systemd/: quizpatenteb.service
docs/: deployment.md
docs/superpowers/plans/: 2026-04-28-critical-security-hardening.md  2026-05-01-hard-questions.md  2026-05-03-hard-quiz-subcategory-expansion.md  2026-05-11-vocab-custom-words.md
docs/superpowers/specs/: 2026-04-06-multi-user-workspaces-design.md  2026-04-06-vocab-question-lookup-design.md  2026-05-01-hard-questions-design.md  2026-05-03-hard-quiz-subcategory-expansion-design.md  2026-05-11-vocab-custom-words-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  languages.js  styles.css
scripts/: analyze_italian_dictionary_overlap.py  deploy.sh  generate_normalized_vocab.py  warm_translations.py
tests/: conftest.py  test_auth.py  test_claude_fallback.py  test_custom_vocab.py  test_email_sender.py  test_forgot_token.py  test_hard_questions.py  test_mint_user_tokens.py  test_rate_limit.py  test_spend.py  test_user_endpoints.py
